--- a/app/views/Auth/Page/index.html
+++ b/app/views/Auth/Page/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to homepage</h1>
     <p>This is my home page, you can visit the exactly menu by</p>
-    <a href="/content">click here</a>
+    <a href="#">click here</a>
 </body>
 </html>
